<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_catalog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicapp.CatalogActivity">

    <TextView
        android:id="@+id/nowplaying"
        style="@style/CategoryStyle"
        android:background="@color/category_purchase"
        android:text="@string/category_gotonowplaying" />

    <TextView
        android:layout_below="@id/nowplaying"
        android:id="@+id/catalogsortgenre"
        style="@style/CategoryStyle"
        android:background="@color/category_catalog"
        android:text="@string/category_catalogsortgenre" />

    <TextView
        android:layout_below="@id/catalogsortgenre"
        android:id="@+id/catalogsortband"
        style="@style/CategoryStyle"
        android:background="@color/category_nowplaying"
        android:text="@string/category_catalogsortband" />

    <TextView
        android:layout_below="@id/catalogsortband"
        android:id="@+id/main"
        style="@style/CategoryStyle"
        android:background="@color/category_purchase"
        android:text="@string/category_gotomain" />

    <TextView
        android:layout_below="@id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="This page would display a list of music available. The buttons would allow you to sort the music for better access." />

</RelativeLayout>